[tool.poetry]
name = "discord-backup"
version = "0.1.0"
description = ""
authors = ["theoremoon <theoldmoon0602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.11"
"discord.py" = "^1.5.1"
requests = "^2.25.0"
pytz = "^2022.1"

[tool.poetry.scripts]
discord-backup = "main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pyright]
